--- a/style.css
+++ b/style.css
@@ -290,7 +290,7 @@ html {
     z-index: 1;
   }
 }
-@media only screen and (max-width: 700px) {
+@media only screen and (max-width: 600px) {
   .logo {
     width: 100%;
   }
@@ -311,23 +311,25 @@ html {
   .hero_body {
     margin: 0 auto;
     font-size: 1.7em;
-    margin-top: 3em;
+    margin-top: 6em;
   }
   .logo {
-    justify-content: space-between;
+    justify-content: flex-start;
   }
   .semi {
     height: 50px;
-    -webkit-transform: translate(5%, 5%);
+    -webkit-transform: translate(0%, 5%);
     transform: translate(0%, 5%);
   }
-
+  .main-title {
+    font-size: 3.5em;
+  }
   .red-square {
-    height: 45px;
-    transform: translate(0%, 120%);
+    height: 40px;
+    transform: translate(-20%, 110%);
   }
   .blue-triangle {
-    height: 45px;
-    transform: translate(495%, -85%);
+    height: 40px;
+    transform: translate(430%, -90%);
   }
 }
