--- a/style.css
+++ b/style.css
@@ -232,7 +232,7 @@ button {
 
 .hero_body {
   max-width: 40ch;
-  font-size: 1.35em;
+  font-size: 1.5em;
 }
 
 .my-name {
@@ -325,7 +325,6 @@ button {
 .work-wrapper {
   display: flex;
   justify-content: space-between;
-
 }
 
 .work-wrapper_right {
@@ -339,8 +338,8 @@ button {
   font-size: 2em;
 }
 .work-wrapper_body {
-  font-size: 1.25em;
-  margin-top:0.75em;
+  font-size: 1.15em;
+  margin-top: 0.75em;
 }
 .work_image {
   width: 40%;
@@ -359,12 +358,13 @@ button {
   font-family: Roobert;
   max-width: 55ch;
   width: 50%;
-  font-size:1.15em;
+  font-size: 1.15em;
 }
 
 .about_right {
-  width: 40%;
+  width: 35%;
 }
+
 
 .about h1 {
   font-size: 3em;
@@ -376,8 +376,8 @@ button {
   justify-content: space-between;
 }
 
-.about_left-body > span {
-  margin-top: 0.75em;
+.about_left-body > span + span {
+  margin-top: 2em;
   display: block;
 }
 .contact {
@@ -552,7 +552,7 @@ button {
   }
 }
 
-@media only screen and (max-width: 536px){
+@media only screen and (max-width: 536px) {
   #span-designer::before {
     width: 70px;
     height: 70px;
@@ -560,10 +560,10 @@ button {
     top: 15px;
   }
 
-    #span-digital-artisan::after {
+  #span-digital-artisan::after {
     width: 80px;
     height: 80px;
     left: 180px;
     top: 110px;
-} 
+  }
 }
