--- a/style.css
+++ b/style.css
@@ -390,7 +390,7 @@ button {
 }
 
 .work-wrapper > img {
-  /* max-width: 500px; */
+  max-width: 500px;
 }
 
 /* media queries */
@@ -425,7 +425,7 @@ button {
     font-size: 1em;
   }
   .container {
-    width: 80%;
+    width: 90%;
   }
   .navigation {
     display: none;
@@ -442,7 +442,7 @@ button {
   .main-title {
     margin-top: 0em;
     line-height: 1.25em;
-    font-size: 3.5em;
+    font-size: 2.5em;
   }
   .hero_body {
     font-size: 2.5em;
@@ -483,6 +483,13 @@ button {
 }
 
 @media only screen and (max-width: 1250px) {
+  .container {
+    width: 80%;
+  }
+
+  .yellow-rect {
+    display: none;
+  }
   .main-title {
     font-size: 4.5em;
   }
@@ -560,13 +567,17 @@ button {
     width: 70px;
     height: 70px;
     left: 0px;
-    top: 15px;
+    top: 10px;
   }
 
   #span-digital-artisan::after {
     width: 80px;
     height: 80px;
-    left: 180px;
-    top: 110px;
+    left: 160px;
+    top: 95px;
+  }
+
+  .main-title {
+    font-size: 4em;
   }
 }
