--- a/style.css
+++ b/style.css
@@ -390,7 +390,11 @@ button {
 }
 
 .work-wrapper > img {
-  max-width: 500px;
+  max-height: 500px;
+}
+
+.hortus-botanicus {
+  max-height: 500px;
 }
 
 /* media queries */
@@ -491,8 +495,9 @@ button {
   }
 
   .yellow-rect {
-    display: none;
+    transform: translate(72%, -700%);
   }
+
   .main-title {
     font-size: 4.5em;
   }
@@ -518,6 +523,11 @@ button {
   .header {
     font-size: 1em;
   }
+
+  .yellow-rect {
+    display: none;
+  }
+
   .hero_right {
     display: none;
   }
@@ -554,6 +564,10 @@ button {
   .work-wrapper_right {
     width: 100%;
     margin-left: 0em;
+  }
+
+  .work-wrapper {
+    flex-direction: column;
   }
 
   .work-wrapper_body {
@@ -601,5 +615,22 @@ button {
 
   .main-title {
     font-size: 4em;
+  }
+}
+@media only screen and (max-width: 540px) and (min-width: 477px) {
+  #span-digital-artisan::after {
+    width: 80px;
+    height: 80px;
+    left: 340px;
+    top: 10px;
+  }
+}
+
+@media only screen and (max-width: 670px) and (min-width: 600px) {
+  #span-digital-artisan::after {
+    width: 80px;
+    height: 80px;
+    left: 185px;
+    top: 95px;
   }
 }
