--- a/style.css
+++ b/style.css
@@ -327,6 +327,10 @@ button {
   justify-content: space-between;
 }
 
+.work-wrapper_left {
+  width: 40%;
+}
+
 .work-wrapper_right {
   display: flex;
   flex-direction: column;
@@ -341,12 +345,9 @@ button {
   font-size: 1.15em;
   margin-top: 0.75em;
 }
-.work_image {
-  width: 40%;
-}
 
 .work-wrapper + .work-wrapper {
-  margin-top: 2em;
+  margin-top: 4em;
 }
 
 .about {
@@ -393,7 +394,7 @@ button {
   max-height: 500px;
 }
 
-.hortus-botanicus {
+.about_right-image {
   max-height: 500px;
 }
 
@@ -527,7 +528,6 @@ button {
   .yellow-rect {
     display: none;
   }
-
   .hero_right {
     display: none;
   }
@@ -557,13 +557,13 @@ button {
   .about-wrapper {
     flex-direction: column;
   }
-  .work_image {
-    width: 100%;
-  }
-
   .work-wrapper_right {
     width: 100%;
     margin-left: 0em;
+  }
+
+  .work-wrapper_left {
+    width: 80%;
   }
 
   .work-wrapper {
@@ -593,8 +593,12 @@ button {
   }
 
   .about_right {
-    width: 100%;
+    width: 80%;
     margin-top: 5em;
+  }
+
+  .about_right-image {
+    width: 100%;
   }
 }
 
