--- a/style.css
+++ b/style.css
@@ -475,6 +475,9 @@ footer {
     margin-top: 4em;
     margin-right: 1em;
   }
+  .footer {
+    margin-top: 4em;
+  }
 }
 @media only screen and (max-width: 600px) {
   .header {
