--- a/style.css
+++ b/style.css
@@ -150,6 +150,7 @@ html {
   transform: rotate(270deg);
   z-index: 100;
   position: fixed;
+  top: 300px;
   left: -50px;
   font-family: Plain;
   font-size: 1.25em;
@@ -189,33 +190,26 @@ button {
   align-self: flex-start;
   border: none;
   color: white;
-  padding: 0.75rem 2rem;
+  padding: 0.75rem 1.5rem;
   text-align: center;
   text-decoration: none;
   display: inline-block;
   font-size: 1.25em;
   font-weight: 900;
+}
+
+.blue {
+  background-color: #002b7f;
   border: #002b7f 2px solid;
 }
 
-#about-button {
-  background-color: #002b7f;
+.button {
+  transition: border 0.1s;
 }
 
-#about-button:hover {
-  border: white 2px solid;
-}
-
-#about-button::before {
-  content: "";
-  background-image: url(/graphics/about-icon.svg);
-  background-repeat: no-repeat;
-  background-size: contain;
-  position: relative;
-  height: 50px;
-  width: 50px;
-  top: 0px;
-  left: 0px;
+.button:hover {
+  border: 2px solid white;
+  cursor: pointer;
 }
 
 #span-designer::before {
@@ -331,6 +325,44 @@ button {
   margin-top: 6em;
 }
 
+.project {
+  margin-top: 2em;
+  font-family: Roobert;
+}
+.project-title {
+  font-size: 3em;
+}
+
+.project_body::after {
+  content: "  ";
+  background-image: url(/graphics/red-triangle.png);
+  background-size: contain;
+  background-repeat: no-repeat;
+  position: absolute;
+  z-index: -1;
+  top: -25px;
+  left: 900px;
+  width: 95px;
+  height: 95px;
+}
+
+.project_body {
+  margin-top: 1em;
+  max-width: 60ch;
+  position: relative;
+}
+
+.maynooth-mockup {
+  margin-top: 2em;
+}
+.work_image {
+  transition: transform 0.3s;
+}
+
+.work_image:hover {
+  transform: scale(1.025);
+  cursor: pointer;
+}
 .work h1 {
   font-size: 3em;
   margin-bottom: 0.25em;
@@ -470,7 +502,6 @@ footer {
   .side-menu {
     left: 300px;
   }
-
   .hero_right {
     margin-top: 4em;
     margin-right: 1em;
@@ -546,6 +577,9 @@ footer {
 }
 
 @media only screen and (max-width: 1250px) {
+  button {
+    display: none;
+  }
   .side-menu {
     display: none;
   }
@@ -576,6 +610,17 @@ footer {
 }
 
 @media only screen and (max-width: 900px) {
+  .footer_wrapper {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+  }
+
+  .footer_right {
+    display: flex;
+    justify-content: center;
+    padding-top: 1em;
+  }
   .semi {
     height: 50px;
   }
@@ -700,5 +745,11 @@ footer {
     height: 80px;
     left: 185px;
     top: 95px;
+  }
+}
+
+@media only screen and (max-width: 1400px) {
+  button {
+    font-size: 1em;
   }
 }
