--- a/style.css
+++ b/style.css
@@ -203,6 +203,11 @@ button {
   border: #002b7f 2px solid;
 }
 
+.red {
+  background-color: #ce1126;
+  border: #ce1126 2px solid;
+}
+
 .button {
   transition: border 0.1s;
 }
@@ -355,6 +360,15 @@ button {
 .maynooth-mockup {
   margin-top: 2em;
 }
+
+.mind-map_right {
+  width: 50%;
+  margin-top: 3em;
+}
+
+.mind-map_left {
+  margin-top: 1em;
+}
 .work_image {
   transition: transform 0.3s;
 }
@@ -501,6 +515,7 @@ footer {
 
   .side-menu {
     left: 300px;
+    top: 500px;
   }
   .hero_right {
     margin-top: 4em;
@@ -613,12 +628,12 @@ footer {
   .footer_wrapper {
     display: flex;
     flex-direction: column;
-    text-align: center;
+    text-align: left;
   }
 
   .footer_right {
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     padding-top: 1em;
   }
   .semi {
