--- a/style.css
+++ b/style.css
@@ -349,10 +349,12 @@ button {
   left: 900px;
   width: 95px;
   height: 95px;
+  transform: rotate(180deg);
 }
 
 .project_body {
   margin-top: 1em;
+  margin-bottom: 1em;
   max-width: 60ch;
   position: relative;
 }
@@ -363,7 +365,7 @@ button {
 
 .mind-map_right {
   width: 50%;
-  margin-top: 3em;
+  margin-top: 2em;
 }
 
 .mind-map_left {
@@ -411,6 +413,15 @@ button {
 
 .work-wrapper + .work-wrapper {
   margin-top: 4em;
+}
+
+.site-link {
+  color: #fcd117;
+  display: inline;
+}
+
+.site-link:hover {
+  text-decoration: underline;
 }
 
 .about {
@@ -493,6 +504,9 @@ footer {
 
 /* media queries */
 @media only screen and (min-width: 2000px) {
+  .project_body::after {
+    left: 1150px;
+  }
   .container {
     width: 55%;
   }
