--- a/style.css
+++ b/style.css
@@ -197,12 +197,18 @@ button {
   font-size: 1.25rem;
   font-weight: 900;
   /* font-family: Plain; */
-  transition: border 0.1s;
+  transition: transform 0.1s;
+  transition: box-shadow 0.1s;
+  -webkit-box-shadow: 0px 6px 9px -2px rgba(7, 7, 7, 0.76);
+  box-shadow: 0px 6px 9px -2px rgba(7, 7, 7, 0.76);
 }
 
 button:hover {
-  border: 2px solid white;
+  /* border: 2px solid white; */
   cursor: pointer;
+  transform: scale(1.025);
+  -webkit-box-shadow: 0px 11px 9px -2px rgba(7, 7, 7, 0.76);
+  box-shadow: 0px 11px 9px -2px rgba(7, 7, 7, 0.76);
 }
 
 .yellow {
@@ -389,7 +395,7 @@ button:hover {
 }
 
 .visuals-video {
-  width: 50%; 
+  width: 50%;
 }
 .visuals-images_wrapper {
   margin-top: 2em;
