--- a/style.css
+++ b/style.css
@@ -190,38 +190,36 @@ button {
   align-self: flex-start;
   border: none;
   color: white;
-  padding: 0.75rem 1.5rem;
+  padding: 0.9rem 1.5rem;
   text-align: center;
   text-decoration: none;
   display: inline-block;
   font-size: 1.25rem;
   font-weight: 900;
-  /* font-family: Plain; */
-  transition: transform 0.1s;
-  transition: box-shadow 0.1s;
+  transition: transform 0.2s;
   -webkit-box-shadow: 0px 6px 9px -2px rgba(7, 7, 7, 0.76);
   box-shadow: 0px 6px 9px -2px rgba(7, 7, 7, 0.76);
 }
 
 button:hover {
-  /* border: 2px solid white; */
   cursor: pointer;
-  transform: scale(1.025);
-  -webkit-box-shadow: 0px 11px 9px -2px rgba(7, 7, 7, 0.76);
-  box-shadow: 0px 11px 9px -2px rgba(7, 7, 7, 0.76);
+  /* transform: scale(1.02); */
+  /* transform: translateY(-5%); */
 }
 
-.yellow {
-  background-color: #fcd117;
-  border: #fcd117 2px solid;
-}
 .red {
   background-color: #ce1126;
-  border: #ce1126 2px solid;
 }
+.red:hover {
+  background-color: #a7091b;
+}
+
 .blue {
   background-color: #002b7f;
-  border: #002b7f 2px solid;
+}
+
+.blue:hover {
+  background-color: #02256c;
 }
 
 #span-designer::before {
@@ -430,6 +428,8 @@ button:hover {
 }
 .work_image {
   transition: transform 0.3s;
+  -webkit-box-shadow: 0px 6px 9px -2px rgba(7, 7, 7, 0.76);
+  box-shadow: 0px 6px 9px -2px rgba(7, 7, 7, 0.76);
 }
 
 .work_image:hover {
